# USMCCPaperPublicityHelper

./: .gitignore  PLAN.md  Package.swift  README.md  index.html  package-lock.json  package.json  project.yml
.github/workflows/: build.yml
2025/USMCC Meeting/: 01-morning-plenary-1.txt  02-muon-collider-design-choices-sensitivities-and-priorities-vladimir-shiltsev.txt  03-morning-plenary-2.txt  04-detector-performance-parallels.txt  05-theory-parallels.txt  06-accelerator-parallels.txt  07-afternoon-plenary.txt  08-morning-plenary.txt  09-am-accelerator-parallels.txt  10-am-detectors-and-instrumentation-r-d-parallels.txt  11-am-theory-parallels.txt  12-pm-accelerator-parallels.txt  13-pm-computing-ai-ml-parallels.txt  14-pm-neutrino-theory-expermient-parallels.txt  15-afternoon-plenary.txt
2025/USMCC School/: 01-future-collider-options-and-discussion-steve-gourlay.txt  02-welcome-karri-dipetrillo-introduction-to-accelerator-physics-of-colliders-vladim.txt  03-accelerator-physics-basics-jeff-eldred.txt  04-accelerator-physics-basics-ii-vladimir-shiltsev.txt  05-muon-collider-machine-overview-rebecca-taylor.txt  (+11 more)
docs/: Allow Quarantine.command  UNSIGNED_MAC_README.txt
scraper/: scrape-transcripts.mjs
scripts/: scrape-transcripts.mjs
src/: App.tsx  api.ts  pdfRender.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anthropic.rs  arxiv.rs  commands.rs  lib.rs  main.rs  parse_row.rs  prompts.rs  settings.rs
src/components/: ErrorBanner.tsx  (+4 more)
(+16 files in other folders)
