[package]
name = "usmcc-publicity-helper"
version = "0.1.0"
description = "USMCC Paper Publicity Helper"
authors = ["USMCC"]
edition = "2021"

[lib]
name = "usmcc_publicity_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
flate2 = "1"
tar = "0.4"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-openssl"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
